Refactored testing service not to use non-existent test case model