@@ -5,110 +5,120 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
 import java.io.*;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.nio.file.*;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
 
 /**
- * Service responsible for compiling and executing Java code strings using Docker containers.
+ * Refactored service for compiling and executing Java code with optional Docker isolation.
+ * Now automatically wraps standalone solution snippets in the template.
  */
 @Service
 public class CodeExecutionService {
-
     private static final long EXECUTION_TIMEOUT_SECONDS = 10;
+    private static final String JAVA_TEMPLATE =
+            """
+                    import java.util.*;
+                    public class %s {
+                        public static void main(String[] args) {
+                            Scanner sc = new Scanner(System.in);
+                            int n = sc.nextInt();
+                            int[] arr = new int[n];
+                            for (int i = 0; i < n; i++) arr[i] = sc.nextInt();
+                            sc.close();
+                            solution(n, arr);
+                        }
+                        %s
+                    }""";
 
     @Value("${code.execution.use-docker:true}")
     private boolean useDocker;
-
     @Value("${code.execution.docker.memory:64m}")
     private String dockerMemoryLimit;
-
     @Value("${code.execution.docker.cpu:0.2}")
     private String dockerCpuLimit;
-
     @Value("${code.execution.docker.seccomp-profile:}")
     private String seccompProfilePath;
 
-    public ExecutionResult compileAndRun(String javaCode, List<Integer> inputData) {
-        if (useDocker && isDockerAvailable()) {
-            return executeCode(javaCode, inputData, true);
-        } else {
-            return executeCode(javaCode, inputData, false);
-        }
+    /**
+     * Default entry: always wrap snippet in template so standalone methods compile.
+     */
+    public ExecutionResult compileAndRun(String code, List<Integer> inputData) {
+        return executePipeline(code, inputData, true);
     }
 
-    public ExecutionResult compileAndRun(String javaCode) {
-        return compileAndRun(javaCode, null);
-    }
-
-    private ExecutionResult executeCode(String javaCode, List<Integer> inputData, boolean withDocker) {
-        ExecutionResult result = new ExecutionResult();
+    /**
+     * Internal unified pipeline for setup, compile, and run.
+     */
+    private ExecutionResult executePipeline(String code, List<Integer> inputData, boolean wrapWithTemplate) {
         String uniqueId = UUID.randomUUID().toString().replace("-", "");
         String className = "GeneratedClass_" + uniqueId;
+        String fullCode = wrapWithTemplate
+                ? String.format(JAVA_TEMPLATE, className, code)
+                : code.replaceFirst("public\\s+class\\s+\\w+", "public class " + className);
+
+        boolean withDocker = useDocker && isDockerAvailable();
         Path tempDir = Paths.get(System.getProperty("java.io.tmpdir"), "java_code_exec_" + uniqueId);
+        ExecutionResult result = new ExecutionResult();
 
         try {
-            // Setup phase
-            setupExecutionEnvironment(tempDir, className, javaCode, inputData);
-
-            // Compilation phase
-            if (!compileCode(tempDir, className, withDocker, result)) {
-                return result;
-            }
-
-            // Execution phase
-            executeCompiledCode(tempDir, className, inputData, withDocker, result);
-
+            prepareEnvironment(tempDir, className, fullCode, inputData);
+            if (!compile(tempDir, className, withDocker, result)) return result;
+            run(tempDir, className, inputData, withDocker, result);
         } catch (IOException | InterruptedException e) {
             result.setResult(ExecutionResult.Result.RUNTIME_ERROR);
             result.getOutputLines().add((withDocker ? "Docker" : "Direct") + " execution error: " + e.getMessage());
             Thread.currentThread().interrupt();
         } finally {
-            cleanupTempDirectory(tempDir);
+            cleanup(tempDir);
         }
-
         return result;
     }
 
-    private void setupExecutionEnvironment(Path tempDir, String className, String javaCode, List<Integer> inputData) throws IOException {
+    private void prepareEnvironment(Path tempDir, String className, String code, List<Integer> inputData) throws IOException {
         Files.createDirectories(tempDir);
-
-        // Write Java code
-        Path javaFilePath = tempDir.resolve(className + ".java");
-        String modifiedJavaCode = javaCode.replaceFirst("public\\s+class\\s+\\w+", "public class " + className);
-        try (BufferedWriter writer = new BufferedWriter(new FileWriter(javaFilePath.toFile()))) {
-            writer.write(modifiedJavaCode);
-        }
-
-        // Write input data if available (only needed for Docker)
+        Files.write(tempDir.resolve(className + ".java"), code.getBytes());
         if (inputData != null && !inputData.isEmpty()) {
-            Path inputFilePath = tempDir.resolve("input.txt");
-            try (BufferedWriter inputWriter = new BufferedWriter(new FileWriter(inputFilePath.toFile()))) {
-                inputWriter.write(String.valueOf(inputData.size()));
-                inputWriter.newLine();
-                for (Integer value : inputData) {
-                    inputWriter.write(String.valueOf(value));
-                    inputWriter.newLine();
-                }
+            Path inputFile = tempDir.resolve("input.txt");
+            try (BufferedWriter bw = Files.newBufferedWriter(inputFile)) {
+                bw.write(String.valueOf(inputData.size())); bw.newLine();
+                for (int v : inputData) bw.write(v + "\n");
             }
         }
     }
 
-    private boolean compileCode(Path tempDir, String className, boolean withDocker, ExecutionResult result) throws IOException, InterruptedException {
-        Process compileProcess = withDocker
-                ? createDockerCompileProcess(tempDir, className)
-                : createDirectCompileProcess(tempDir, className);
+    private boolean compile(Path dir, String className, boolean docker, ExecutionResult result)
+            throws IOException, InterruptedException {
+        Process compileProcess = docker
+                ? createDockerCompileProcess(dir, className)
+                : createDirectCompileProcess(dir, className);
+        String compileOutput = readOutput(compileProcess);
+        boolean compiled = compileProcess.waitFor(EXECUTION_TIMEOUT_SECONDS, TimeUnit.SECONDS)
+                && compileProcess.exitValue() == 0;
+        if (!compiled) {
+            if (compileProcess.isAlive()) {
+                compileProcess.destroyForcibly();
+                result.setResult(ExecutionResult.Result.TIMEOUT);
+            } else {
+                result.setResult(ExecutionResult.Result.COMPILATION_ERROR);
+                if (!compileOutput.isBlank()) Collections.addAll(result.getOutputLines(), compileOutput.split("\n"));
+            }
+        }
+        return compiled;
+    }
 
-        return handleCompilationResult(compileProcess, result);
+    private Process createDirectCompileProcess(Path dir, String className) throws IOException {
+        return new ProcessBuilder("javac", className + ".java")
+                .directory(dir.toFile())
+                .redirectErrorStream(true)
+                .start();
     }
 
     private Process createDockerCompileProcess(Path tempDir, String className) throws IOException {
         List<String> cmd = new ArrayList<>(Arrays.asList(
                 "docker", "run", "--rm",
-                "--memory=256m", "--memory-swap=256m",
-                "--cpus=0.5",
+                "--memory=" + dockerMemoryLimit, "--memory-swap=" + dockerMemoryLimit,
+                "--cpus=" + dockerCpuLimit,
                 "--network=none",
                 "--read-only",
                 "--tmpfs", "/tmp:exec,size=50m,mode=1777",
@@ -121,80 +131,60 @@ public class CodeExecutionService {
                 "openjdk:11-jdk-slim",
                 "sh", "-c", "timeout " + EXECUTION_TIMEOUT_SECONDS + "s javac " + className + ".java"
         ));
-
-        String seccompPath = getSeccompProfileAbsolutePath();
-        if (seccompPath != null) {
-            cmd.addAll(Arrays.asList("--security-opt", "seccomp=" + seccompPath));
-        }
-
+        String seccomp = getSeccompProfile();
+        if (seccomp != null) cmd.addAll(Arrays.asList("--security-opt", "seccomp=" + seccomp));
         return new ProcessBuilder(cmd).redirectErrorStream(true).start();
     }
 
-
-    private Process createDirectCompileProcess(Path tempDir, String className) throws IOException {
-        return new ProcessBuilder("javac", className + ".java")
-                .directory(tempDir.toFile())
-                .redirectErrorStream(true)
-                .start();
-    }
-
-    private boolean handleCompilationResult(Process compileProcess, ExecutionResult result) throws IOException, InterruptedException {
-        String compileOutput = readProcessOutput(compileProcess);
-        boolean compiled = compileProcess.waitFor(EXECUTION_TIMEOUT_SECONDS, TimeUnit.SECONDS) && compileProcess.exitValue() == 0;
-
-        if (!compiled) {
-            if (compileProcess.isAlive()) {
-                compileProcess.destroyForcibly();
-                result.setResult(ExecutionResult.Result.TIMEOUT);
-            } else {
-                result.setResult(ExecutionResult.Result.COMPILATION_ERROR);
-                if (!compileOutput.trim().isEmpty()) {
-                    result.getOutputLines().addAll(Arrays.asList(compileOutput.split("\n")));
-                }
-            }
-        }
-        return compiled;
-    }
-
-    private void executeCompiledCode(Path tempDir, String className, List<Integer> inputData, boolean withDocker, ExecutionResult result) throws IOException, InterruptedException {
-        Process runProcess = withDocker
-                ? createDockerRunProcess(tempDir, className, inputData)
-                : createDirectRunProcess(tempDir, className, inputData);
-
+    private void run(Path dir, String className, List<Integer> inputData, boolean docker, ExecutionResult result)
+            throws IOException, InterruptedException {
+        Process runProcess = docker
+                ? createDockerRunProcess(dir, className, inputData)
+                : createDirectRunProcess(dir, className, inputData);
         ExecutionContext context = new ExecutionContext();
-        setupTimeoutKiller(runProcess, context);
-
-        String runOutput = readProcessOutput(runProcess);
-        waitForProcess(runProcess);
-
+        startTimeoutWatcher(runProcess, context);
+        String runOutput = readOutput(runProcess);
+        runProcess.waitFor();
         if (context.wasKilledByTimeout) {
             result.setResult(ExecutionResult.Result.TIMEOUT);
             return;
         }
-
         if (runProcess.isAlive()) {
             runProcess.destroyForcibly();
             result.setResult(ExecutionResult.Result.TIMEOUT);
             return;
         }
-
         if (runProcess.exitValue() != 0) {
             result.setResult(ExecutionResult.Result.RUNTIME_ERROR);
-            if (!runOutput.trim().isEmpty()) {
-                result.getOutputLines().addAll(Arrays.asList(runOutput.split("\n")));
-            }
+            if (!runOutput.isBlank()) Collections.addAll(result.getOutputLines(), runOutput.split("\n"));
             return;
         }
+        List<String> lines = new ArrayList<>();
+        for (String l : runOutput.split("\n")) if (!l.isBlank()) lines.add(l.trim());
+        result.setOutputLines(lines);
+        result.setResult(ExecutionResult.Result.SUCCESS);
+    }
 
-        // Success case
-        processSuccessfulOutput(runOutput, result);
+    private Process createDirectRunProcess(Path dir, String className, List<Integer> inputData) throws IOException {
+        Process p = new ProcessBuilder("java", className)
+                .directory(dir.toFile())
+                .redirectErrorStream(true)
+                .start();
+        if (inputData != null && !inputData.isEmpty()) {
+            try (PrintWriter writer = new PrintWriter(p.getOutputStream(), true)) {
+                writer.println(inputData.size());
+                inputData.forEach(writer::println);
+            }
+        } else {
+            p.getOutputStream().close();
+        }
+        return p;
     }
 
     private Process createDockerRunProcess(Path tempDir, String className, List<Integer> inputData) throws IOException {
-        List<String> runCommand = new ArrayList<>(Arrays.asList(
+        List<String> cmd = new ArrayList<>(Arrays.asList(
                 "docker", "run", "--rm",
-                "--memory=" + dockerMemoryLimit,
-                "--memory-swap=" + dockerMemoryLimit,
+                "--memory=" + dockerMemoryLimit, "--memory-swap=" + dockerMemoryLimit,
                 "--cpus=" + dockerCpuLimit,
                 "--network=none",
                 "--read-only",
@@ -203,116 +193,53 @@ public class CodeExecutionService {
                 "--cap-drop=ALL",
                 "--pids-limit=32",
                 "--ulimit", "nofile=64:64",
-                "--ulimit", "nproc=16:16"
-        ));
-
-        // Add seccomp profile if configured
-        String seccompPath = getSeccompProfileAbsolutePath();
-        if (seccompPath != null) {
-            runCommand.addAll(Arrays.asList("--security-opt", "seccomp=" + seccompPath));
-        }
-
-        runCommand.addAll(Arrays.asList(
+                "--ulimit", "nproc=16:16",
                 "-v", tempDir.toAbsolutePath() + ":/workspace:ro",
-                "-w", "/tmp"
+                "-w", "/tmp",
+                "openjdk:11-jre-slim",
+                "sh", "-c",
+                "cp /workspace/" + className + ".class /tmp/ && " +
+                        "timeout " + EXECUTION_TIMEOUT_SECONDS + "s java " + className +
+                        (inputData != null && !inputData.isEmpty() ? " < /workspace/input.txt" : "")
         ));
-
-        if (inputData != null && !inputData.isEmpty()) {
-            runCommand.addAll(Arrays.asList(
-                    "openjdk:11-jre-slim",
-                    "sh", "-c",
-                    "cp /workspace/" + className + ".class /tmp/ && " +
-                            "timeout " + EXECUTION_TIMEOUT_SECONDS + "s java " + className + " < /workspace/input.txt"
-            ));
-        } else {
-            runCommand.addAll(Arrays.asList(
-                    "openjdk:11-jre-slim",
-                    "sh", "-c",
-                    "cp /workspace/" + className + ".class /tmp/ && " +
-                            "timeout " + EXECUTION_TIMEOUT_SECONDS + "s java " + className
-            ));
-        }
-
-        return new ProcessBuilder(runCommand).redirectErrorStream(true).start();
+        String sec = getSeccompProfile();
+        if (sec != null) cmd.addAll(Arrays.asList("--security-opt", "seccomp=" + sec));
+        return new ProcessBuilder(cmd).redirectErrorStream(true).start();
     }
 
-    private Process createDirectRunProcess(Path tempDir, String className, List<Integer> inputData) throws IOException {
-        Process runProcess = new ProcessBuilder("java", className)
-                .directory(tempDir.toFile())
-                .redirectErrorStream(true)
-                .start();
-
-        // Handle input for direct execution
-        if (inputData != null && !inputData.isEmpty()) {
-            try (PrintWriter writer = new PrintWriter(runProcess.getOutputStream(), true)) {
-                writer.println(inputData.size());
-                for (Integer value : inputData) {
-                    writer.println(value);
-                }
-            } catch (Exception ignored) {
-                // Continue if input writing fails
-            }
-        } else {
-            try {
-                runProcess.getOutputStream().close();
-            } catch (IOException ignored) {
-            }
+    private String readOutput(Process process) throws IOException {
+        StringBuilder output = new StringBuilder();
+        try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
+            String line;
+            while ((line = reader.readLine()) != null) output.append(line).append("\n");
         }
-
-        return runProcess;
+        return output.toString();
     }
 
-    private void setupTimeoutKiller(Process process, ExecutionContext context) {
-        Thread killerThread = new Thread(() -> {
+    private void startTimeoutWatcher(Process process, ExecutionContext context) {
+        Thread killer = new Thread(() -> {
             try {
                 Thread.sleep(EXECUTION_TIMEOUT_SECONDS * 1000);
-                if (process.isAlive()) {
-                    context.wasKilledByTimeout = true;
-                    process.destroyForcibly();
-                }
+                if (process.isAlive()) { context.wasKilledByTimeout = true; process.destroyForcibly(); }
             } catch (InterruptedException e) {
                 Thread.currentThread().interrupt();
             }
         });
-        killerThread.setDaemon(true);
-        killerThread.start();
-    }
-
-    private void waitForProcess(Process process) throws InterruptedException {
-        try {
-            process.waitFor();
-        } catch (InterruptedException e) {
-            Thread.currentThread().interrupt();
-            throw e;
-        }
-    }
-
-    private void processSuccessfulOutput(String runOutput, ExecutionResult result) {
-        List<String> actualOutputLines = new ArrayList<>();
-        if (!runOutput.trim().isEmpty()) {
-            String[] lines = runOutput.split("\n");
-            for (String line : lines) {
-                String trimmedLine = line.trim();
-                if (!trimmedLine.isEmpty()) {
-                    actualOutputLines.add(trimmedLine);
-                }
-            }
-        }
-        result.setOutputLines(actualOutputLines);
-        result.setResult(ExecutionResult.Result.SUCCESS);
+        killer.setDaemon(true);
+        killer.start();
     }
 
     private boolean isDockerAvailable() {
         try {
-            Process process = new ProcessBuilder("docker", "--version").start();
-            boolean finished = process.waitFor(5, TimeUnit.SECONDS);
-            return finished && process.exitValue() == 0;
+            Process p = new ProcessBuilder("docker", "--version").start();
+            boolean ok = p.waitFor(5, TimeUnit.SECONDS) && p.exitValue() == 0;
+            return ok;
         } catch (Exception e) {
             return false;
         }
     }
 
-    private void cleanupTempDirectory(Path tempDir) {
+    private void cleanup(Path tempDir) {
         try {
             if (Files.exists(tempDir)) {
                 Files.walk(tempDir)
@@ -321,36 +248,16 @@ public class CodeExecutionService {
                         .forEach(File::delete);
             }
         } catch (IOException e) {
-            System.err.println("Error during cleanup of " + tempDir + ": " + e.getMessage());
+            System.err.println("Error cleaning up " + tempDir + ": " + e.getMessage());
         }
     }
 
-    private String readProcessOutput(Process process) throws IOException {
-        StringBuilder output = new StringBuilder();
-        try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
-            String line;
-            while ((line = reader.readLine()) != null) {
-                output.append(line).append("\n");
-            }
-        }
-        return output.toString();
+    private String getSeccompProfile() {
+        if (seccompProfilePath == null || seccompProfilePath.isBlank()) return null;
+        Path p = Paths.get(seccompProfilePath.trim());
+        if (!p.isAbsolute()) p = Paths.get(System.getProperty("user.dir")).resolve(p).normalize();
+        return p.toAbsolutePath().toString();
     }
 
-    // Helper class to track timeout state
-    private static class ExecutionContext {
-        boolean wasKilledByTimeout = false;
-    }
-
-    // Helper class to get seccomp.json path
-    private String getSeccompProfileAbsolutePath() {
-        if (seccompProfilePath == null || seccompProfilePath.trim().isEmpty()) {
-            return null;
-        }
-        Path path = Paths.get(seccompProfilePath.trim());
-        if (!path.isAbsolute()) {
-            // If relative, resolve against project directory or working directory dynamically
-            path = Paths.get(System.getProperty("user.dir")).resolve(path).normalize();
-        }
-        return path.toAbsolutePath().toString();
-    }
+    private static class ExecutionContext { boolean wasKilledByTimeout; }
 }
